[package]
name = "tls-ca"
version = "0.1.0"
edition = "2024"

# make check-cert the default
default-run = "check-cert"

[[bin]]
name = "check-cert"
path = "src/bin/check-cert.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"


[dependencies]
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
tokio = { version = "1.48.0", features = ["full"]}
tokio-rustls = "0.23.0"
